# Nexpp

./: CMakeLists.txt  resources.qrc
.github/workflows/: cpp_ci.yml
include/Nexpp/CommandLine/: CommandLine.h
include/Nexpp/Data/: CMakeBase.h
include/Nexpp/FileSystem/: FileSystem.h
include/Nexpp/Types/: AppMode.h  Standard.h
src/: main.cpp
src/CommandLine/: CommandLine.cpp
src/Data/: CMakeBase.cpp
src/FileSystem/: FileSystem.cpp
tests/: UTCommandLine.cpp  UTFileSystem.cpp  hello_test.cpp
